# aaaq-hrh-deficit

./: .gitignore  AAAQ_plots_script.py  README.md  constants.py  dashboard.py  main.py  pyproject.toml  utils.py
Documents/: 14_07_22_VW_AAAQ_mastersheet__26_NOV_23.xlsx
notebooks/: AAAQ-INST.TXT  AAAQ_plots.ipynb
