[project]
name = "aaaq-hrh-deficit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cartopy>=0.24.1",
    "geopandas>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pyshp>=2.3.1",
    "streamlit>=1.46.1",
    "streamlit-folium>=0.25.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipython>=9.3.0",
    "jupyterlab>=4.4.4",
]

[tool.poetry.group.dev.dependencies]
vega-datasets = "^0.9.0"

